welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:19: error: illegal start of simple expression
} while (!)
          ^Poucet:22: error: ')' expected but '}' found.
	}
        ^